--- a/src/styles/modules/_primary-nav.css
+++ b/src/styles/modules/_primary-nav.css
@@ -6,7 +6,9 @@
 
   &__list {
     display: flex;
+    justify-content: center;
     list-style-type: none;
+    padding-inline-start: 0;
   }
 
   &__item {
